--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,7 +26,7 @@
       <item row="0" column="0">
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -70,7 +70,13 @@
            </size>
           </property>
           <property name="text">
-           <string>&lt;&lt;</string>
+           <string/>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>32</width>
+            <height>32</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -95,7 +101,13 @@
            </size>
           </property>
           <property name="text">
-           <string>o</string>
+           <string/>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>32</width>
+            <height>32</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -120,7 +132,13 @@
            </size>
           </property>
           <property name="text">
-           <string>&gt;&gt;</string>
+           <string/>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>32</width>
+            <height>32</height>
+           </size>
           </property>
          </widget>
         </item>
